--- a/public/todos.html
+++ b/public/todos.html
@@ -19,7 +19,7 @@
         <main class="app">
             <section class="greeting">
                 <h2 class="title">
-                    What's up<input type="text" id="name" placeholder="Name here" readonly /><button class="del-user">Delete User</button><button class="logout">Logout</button>
+                    What's up, <input type="text" id="name" placeholder="Name here" readonly /><button class="logout">Logout</button>
                 </h2>
             </section>
 
@@ -68,7 +68,8 @@
             </section>
 
         </main>
-
+        <h2 class="title"><button class="del-user">Delete User</button></h2>
+        
         <script src="main.js"></script>
         
     </body>
