--- a/public/todos.html
+++ b/public/todos.html
@@ -61,7 +61,7 @@
                 <h3>TODO LIST</h3>
                 <h3 id="remaining"></h3>
                 <button id="order-category" class="order-category">Order by Category</button>
-                <button id="sort-recent" class="order-category">Sort by Most Recent</button>
+                <button id="sort-recent" class="order-category">Sort by Oldest</button>
                 <div class="list" id="todo-list">
                    
                 </div>
